--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,19 @@ html {
   font-family: var(--font-poppins);
 }
 
+/* input group styles */
+.input-group {
+  @apply mb-5;
+}
+
+.input-group label {
+  @apply block text-xs mb-1;
+}
+
+.input-group input, .input-group textarea {
+  @apply px-4 py-2.5 bg-gray-100 w-full focus:border focus:border-gray-400 outline-none text-sm;
+}
+
 /* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
